Remove large files from tracking and improve .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,31 @@
 igneous-aleph-394703-550f3acb3017.json
 .env
+
+# Image files (test data)
+*.png
+*.jpeg
+*.jpg
+*.gif
+*.bmp
+
+# Excel output files
+*.xlsx
+*.xls
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+*.so
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
