--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,56 @@ igneous-aleph-394703-550f3acb3017.json
 *.xlsx
 *.xls
 
-# Python cache
+# Python cache and bytecode
 __pycache__/
+*.py[cod]
+*$py.class
 *.pyc
 *.pyo
 *.pyd
 .Python
 *.so
+.cache/
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environments
+venv/
+env/
+ENV/
+.venv/
+.env/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# pytest
+.pytest_cache/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
 # IDE files
 .vscode/
@@ -29,3 +72,14 @@ __pycache__/
 # OS files
 .DS_Store
 Thumbs.db
+
+# Application-specific files
+uploads/
+outputs/
+token.json
+oauth_credentials.json
+
+# Temporary files
+*.tmp
+*.temp
+*.log
